--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,7 @@ gen-external-apklibs
 
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
+/.idea/misc.xml
 
 # NDK
 obj/
@@ -63,6 +64,7 @@ obj/
 /out/
 
 # User-specific configurations
+.idea/**
 .idea/libraries/
 .idea/workspace.xml
 .idea/tasks.xml
@@ -127,3 +129,4 @@ fabric.properties
 !/gradle/wrapper/gradle-wrapper.jar
 
 # End of https://www.gitignore.io/api/androidstudio
+/.idea/
