--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,12 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:23.4.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
+
+    // pridal JVY
+    compile 'com.android.support:design:23.1.1'
 }
+
+
 
 
 apply plugin: 'com.google.gms.google-services'
