--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,8 @@ android {
 
 dependencies {
     implementation 'com.google.firebase:firebase-database:11.6.0'
+    implementation 'com.android.support:support-v4:23.4.0'
+    implementation 'com.android.support:recyclerview-v7:23.4.0'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -34,6 +36,8 @@ dependencies {
     // pridal JVY
     compile 'com.android.support:design:23.1.1'
 }
+
+
 
 
 
