--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,12 @@ dependencies {
 
     // pridal JVY
     compile 'com.android.support:design:23.1.1'
+    compile 'pub.devrel:easypermissions:0.2.0'
+    compile 'com.google.firebase:firebase-storage:11.6.0'
+    compile "com.google.firebase:firebase-auth:11.6.0"
+    compile 'com.squareup.picasso:picasso:2.5.2'
+
+
 }
 
 
