--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,16 +16,16 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity  android:screenOrientation="portrait" android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AddExhibit" />
-        <activity android:name=".EditExhibit" />
-        <activity android:name=".PreviewExhibit"></activity>
+        <activity  android:screenOrientation="portrait" android:name=".AddExhibit" />
+        <activity  android:screenOrientation="portrait" android:name=".EditExhibit" />
+        <activity  android:screenOrientation="portrait" android:name=".PreviewExhibit"></activity>
     </application>
 
 </manifest>
