--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,14 +34,22 @@ dependencies {
     testCompile 'junit:junit:4.12'
 
     // pridal JVY
-    compile 'com.android.support:design:23.1.1'
     compile 'pub.devrel:easypermissions:0.2.0'
     compile 'com.google.firebase:firebase-storage:11.6.0'
     compile "com.google.firebase:firebase-auth:11.6.0"
     compile 'com.squareup.picasso:picasso:2.5.2'
 
 
+    //supports
+    compile 'com.android.support:design:23.4.0'
+    compile 'com.android.support:recyclerview-v7:23.4.0'
+    compile 'com.android.support:support-v4:23.4.0'
+    compile 'com.android.support:cardview-v7:23.4.0'
+
+
 }
+
+
 
 
 
